# Parks-lockup

arduino/: sketch_apr14a.ino
faceRecognize/: index.py  test.py
faceRecognize/matchWithImages/: index.py
faceRecognize/matchWithImages/training/: part1.py  part3.py  traiining_data.py  train_model.py
faceRecognize/matchWithWebcam/: index.py
faceRecognize/matchWithWebcam/cv2/: part1.py  part3.py
main/parkslockup/: pyproject.toml
main/parkslockup/parkslockup/: __init__.py  faceRecognition.py  user.xlsx
main/parkslockup/parkslockup/faceRecognition/: faceRecognition.py  recoFaces.py  recoUser.py  registUser.py  util.py
main/parkslockup/tests/: __init__.py
matchWithImages/cv2/: index.py
matchWithWebcam/cv2/: part1.py  part3.py  use_model.py
matchWithWebcam/faceRecognize/: index.py
socketClient/: package-lock.json  package.json
socketClient/src/: App.js  globalStyle.js  index.js
socket_server/: go.mod  main.go
socket_server/controllers/: check_door.go  socket.go
socket_server/models/: door.go
testing/baseball/: package-lock.json  package.json  pitch_type.js  server.js  webpack.config.js
testing/getting-started/: package.json
testing/usingJS/: index.html  index.js  package-lock.json  package.json  style.css
