[tool.poetry]
name = "parkslockup"
version = "0.1.0"
description = ""
authors = ["박병관 <pbk575@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 || ^3.9"
face-recognition = "^1.3.0"
openpyxl = "^3.1.2"
opencv-python = "^4.7.0.72"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
